core/core-common/src/tests/models/snapshots/proton_core_common__models__tests__contact__contact_suggestions__concat_contact_suggestions_0.snap
---
source: core/core-common/src/tests/models/contact.rs
expression: display_suggestions(one.all().to_vec())
snapshot_kind: text
---
2 suggestions:

contact/234: Michael Scott
M (#213474): Michael Scott <mXXXXXX@XXXXX>,  local_id: 234, Proton address, last used: 2

contact/123: Barbara Lox
B (#A839A4): Barbara Lox <bXXXXXX@XXXXX>,  local_id: 123, Proton address, last used: 1
