core/core-common/src/tests/models/snapshots/proton_core_common__models__tests__contact__contact_suggestions__test_contact_suggestions_1.snap
---
source: core/core-common/src/tests/models/contact.rs
expression: display_suggestions(res)
---
1 suggestions:

contact/123: Barbara Lox
B (#0F735A): barbara@lox.com <barbara@lox.com>,  local_id: 123, last used: 1
