core/core-common/src/tests/models/snapshots/proton_core_common__models__tests__contact__contact_suggestions__test_contact_suggestions_8.snap
---
source: core/core-common/src/tests/models/contact.rs
expression: display_suggestions(res)
---
8 suggestions:

contact/678: Jason Mendoza
J (#764AC4): jianyu.li@pm.me <jianyu.li@pm.me>,  local_id: 678, Proton address, last used: 2

contact/234: Michael Scott
M (#4989FF): m.scott@pm.me <m.scott@pm.me>,  local_id: 234, Proton address, last used: 2

contact/123: Barbara Lox
B (#9E66FC): barbara@pm.me <barbara@pm.me>,  local_id: 123, Proton address, last used: 1

contact/999: Detective Peralta
J (#9C89FF): jake.peralta@99.com <jake.peralta@99.com>,  local_id: 999, last used: 3

contact/112: Jake Peralta
H (#764AC4): harvey@jp.com <harvey@jp.com>,  local_id: 112, last used: 1

device-contact-email/000-0: Aunt Molly
A (#7B3185): <molly@family.com>

device-contact-email/001-0: Aunt Molly
A (#7B3185): <badass@aunt.com>

group/910: M. Schur Productions
J (#764AC4): jianyu.li@pm.me <jianyu.li@pm.me>,  local_id: 678, Proton address, last used: 2
M (#4989FF): m.scott@pm.me <m.scott@pm.me>,  local_id: 234, Proton address, last used: 2
J (#9C89FF): jake.peralta@99.com <jake.peralta@99.com>,  local_id: 456, last used: 3
